# universal-hash

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  SKILL.md
.cargo/: config.toml  config.toml.example
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
benches/: uhash_bench.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/rpc/: mod.rs
crates/cli/src/wallet/: mod.rs
crates/core/: Cargo.toml
crates/core/benches/: uhash_bench.rs
crates/core/src/: ffi.rs  lib.rs  params.rs  primitives.rs  tests.rs  uhash.rs
crates/demo/: README.md
crates/demo/src-tauri/: Cargo.toml  tauri.conf.json
crates/demo/src-tauri/src/: lib.rs  main.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
docs/: mining-guide.md  validator-configuration.md
scripts/: build-all.sh
src/: lib.rs  main.rs
src/rpc/: mod.rs
