[workspace]
members = ["crates/cli", "crates/core", "crates/web", "crates/demo/src-tauri"]
default-members = ["crates/cli", "crates/core", "crates/web"]
resolver = "2"

[workspace.package]
version = "0.2.7"
authors = ["Cyberia"]
license = "Unlicense"
repository = "https://github.com/cyberia-to/universal-hash"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.bench]
lto = "fat"
codegen-units = 1
