[package]
name = "uhash-core"
version.workspace = true
edition = "2024"
authors.workspace = true
description = "UniversalHash v4 - democratic proof-of-work algorithm where phones compete with servers"
repository.workspace = true
license.workspace = true
keywords = ["crypto", "hash", "pow", "blockchain", "cosmos"]
categories = ["cryptography", "no-std"]

[lib]
crate-type = ["lib"]

[features]
default = ["std", "parallel"]
std = ["blake3/std"]
parallel = ["rayon"]

[dependencies]
# Cryptographic primitives with raw compression function support
aes = "0.8"
sha2 = { version = "0.10", features = ["compress"] }
blake3 = { version = "1.5", default-features = false }
cipher = "0.4"

# For raw AES intrinsics (native builds only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpufeatures = "0.2"

# Parallelism (optional, for parallel chain processing)
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = "0.5"
hex = "0.4"

[[bench]]
name = "uhash_bench"
harness = false

