[package]
name = "uhash-demo"
version.workspace = true
description = "UHash Benchmark Demo App"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "uhash_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"

# Native hashing
uhash-core = { path = "../../core" }
hex = "0.4"
